Piccole modifiche alla chat , (devo ancora finire di sistemarle bene insieme al testo javascript)

--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,13 @@
     .msg-box.by-user {
         align-self: flex-end;
         background-color: #dcf8c6;
+        max-width: 500px;
     }
 
     .msg-box.by-computer {
         align-self: flex-start;
         background-color: white;
+        max-width: 500px;
     }
 
     .msg-box > .time {
